@@ -4,27 +4,27 @@
   <package id="AngularJS.Route" version="1.2.15" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
-  <package id="Breeze.Angular" version="0.8.3" targetFramework="net45" />
-  <package id="Breeze.Angular.Directives" version="1.3.5" targetFramework="net45" />
+  <package id="Breeze.Angular" version="0.8.5" targetFramework="net45" />
+  <package id="Breeze.Angular.Directives" version="1.3.6" targetFramework="net45" />
   <package id="Breeze.Client" version="1.4.11" targetFramework="net45" />
   <package id="datajs" version="1.1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Q" version="1.0.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net45" />
